fix: remove user join date row and tweak schedule chip spacing
Drop demo join date from user detail; remove unused hint styles.
Minor calendar/side panel chip padding adjustments.

--- a/src/pages/schedule/MonthCalendar.scss
+++ b/src/pages/schedule/MonthCalendar.scss
@@ -435,7 +435,7 @@
   @extend %month-calendar__title-chip-trigger;
 
   @include bp.below(bp.$sm) {
-    padding: 0.46rem 0.62rem;
+    padding: 0.4rem 0.62rem;
   }
 }
 
@@ -443,7 +443,7 @@
   @extend %month-calendar__title-chip-trigger;
 
   @include bp.below(bp.$sm) {
-    padding: 0.46rem 0.62rem;
+    padding: 0.4rem 0.62rem;
   }
 }
 
