--- a/src/pages/schedule/ScheduleSidePanel.scss
+++ b/src/pages/schedule/ScheduleSidePanel.scss
@@ -108,10 +108,11 @@
   align-items: center;
   justify-content: center;
   margin: 0;
-  padding: 0.3rem 0.8rem;
+  padding: 0 0.8rem;
   border-radius: 999px;
   border: 2px solid transparent;
-  font-size: 0.8125rem;
+  line-height: 1.5rem;
+  font-size: 0.8rem;
   font-weight: 700;
   letter-spacing: -0.03em;
   cursor: pointer;
