--- a/src/pages/user/Detail.scss
+++ b/src/pages/user/Detail.scss
@@ -249,12 +249,6 @@
   }
 }
 
-.user-detail-spec__hint {
-  font-size: 0.72rem;
-  font-weight: 500;
-  color: var(--color-text-muted);
-}
-
 .user-detail-contact-block {
   position: relative;
   z-index: 1;
